# connectpilot

./: package-lock.json
backend/: pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/app/: store.ts
frontend/src/components/MessageGenerator/: MessageForm.module.css  MessageForm.tsx  constants.ts
frontend/src/components/common/: index.ts
frontend/src/components/common/Button/: Button.tsx
frontend/src/components/common/Form/: Form.tsx
frontend/src/components/common/Input/: Input.tsx  input.css
frontend/src/components/common/Select/: Select.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/constants/: routes.tsx
frontend/src/features/message/: messageSlice.ts
frontend/src/types/: message.types.ts  mood.types.ts
frontend/src/utils/: index.ts  message.ts  validation.ts
